--- a/README.textile
+++ b/README.textile
@@ -10,7 +10,7 @@ h3. Requirements:
 h3. Setup
 
  * Install Jython
- * Make both jars in the 'deps' directory available to the Java classpath
+ * Make sure all jars in the 'deps' directory are available to the Java classpath
 
 Example use from a Jython shell: 
 <pre>
@@ -21,5 +21,7 @@ Example use from a Jython shell:
  >> for i in results: print i 
 </code>
 </pre>
+
+See 'testesx.py' for more examples.
 
 NOTE: Not for production use.  We still have some work to do!
