--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,8 @@
 
 Next:
 
-- on QuickClone VM is failing because the VM is left in the suspended state and can't resume it...
+- on QuickClone VM is failing because the VM is left in the suspended state and can't resume it... (because of testing???)
 
-- esx.pm use 'croak' to exit the process on errors. Need to convert my code to exit as well INSTEAD
-  of just returning 'undef'
+- replace with croaks.
 
-- implement renameSnapshotVM
-
-- test all
+- tests (do from command line if needed...)
